mark down 문서 연습

--- a/0716.html
+++ b/0716.html
@@ -86,7 +86,7 @@ button {
         <button type="button">
             <img src="./images/icon/setting.svg" alt="setting">
         </button> 
-    <div>
+    </div>
 
         <a href="#" class="btnTop">TOP</a>
 
