--- a/0716.html
+++ b/0716.html
@@ -24,7 +24,7 @@
     border-radius: 12px;
     margin: 100px auto 0; /*top left, right, bottom*/
     padding: 6px 16px; /*top,bottom(위아래) left,right(왼오)*/
-    display: flex;
+    display: none; /*figma-눈과 비슷. 화면에 보이지 말아라*/
     align-items: flex-end; /*교차축정렬*/
     gap: 20px;
     flex-direction: column; /*row-*/
@@ -64,17 +64,32 @@ body {
 
 .btnTop:hover {
 
-    background-color: aqua;
+    background-color: #404040;
 }
+
 button {
     background-color: transparent;
     border: none;
 }
 
+    .btn-container button {
+        background-color: #fff;
+        border: 1px solid #333;
+        height: 42px;
+        padding: 0 20px;
+    }
+
     </style>
+
 </head>
 
 <body>
+    <div class="btn-container" title="팝업버튼을 클릭해보세요!!! ^ㅇ^">
+    <button type="button" onclick="modalPopup()">모달팝업 띄우기</button>
+    <button type="button" onclick="alertPopup()"> Alert 띄우기</button>
+     <button type="button" onclick="confirmPopup()"> Confirm 띄우기</button>
+    </div>
+
     <div class="container">
         <button type="button" class="editBtn"> Edit</button>
         <button type="button">
@@ -89,6 +104,20 @@ button {
     </div>
 
         <a href="#" class="btnTop">TOP</a>
+
+        <script>
+            function alertPopup() {
+                alert('이것은 경고창입니다. 얼럿창')
+            }
+
+            function confirmPopup() {
+                confirm('이름을 입력하세요')
+            }
+            function modalPopup() {
+                const el=document.querySelector('.container')
+                el.style.display = 'flex';
+            }
+        </script>
 
 </body>
 </html>
